# PicACGComic

./: .gitignore  README.md  build.gradle.kts  gradle.properties
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bitmap-bundle/: CMakeLists.txt  bitmap-bundle.cpp  bitmap.cpp  bitmap.h  copy_pixel.cpp  copy_pixel.h  log.h  rect.cpp  rect.h  unit.h
app/src/main/res/drawable/: ic_round_comment_bubble.xml  ic_round_comment_bubble_outline_24.xml  ic_round_create_new_folder_24.xml  ic_round_device_hub_24.xml  ic_round_license_24.xml  ic_round_lock_24.xml  selector_state_expandable.xml
app/src/main/res/layout-w1240dp/: activity_launcher.xml  content_home.xml  dialog_fragment_commenting.xml  fragment_browsing.xml  fragment_categories.xml  fragment_category.xml  fragment_comic.xml  fragment_comments.xml  fragment_home.xml  fragment_index.xml  fragment_metadata.xml  fragment_search.xml  fragment_sign_in.xml  fragment_viewer.xml  layout_recycler_categories.xml  layout_recycler_index.xml  metadata_chapters.xml  nav_header_comic.xml
app/src/main/res/layout-w600dp/: fragment_browsing.xml  fragment_categories.xml  fragment_comic.xml  fragment_comments.xml  fragment_home.xml  fragment_index.xml  fragment_metadata.xml  fragment_search.xml  fragment_sign_in.xml  fragment_signing.xml  fragment_splash.xml  fragment_viewer.xml  layout_recycler_category.xml  layout_recycler_index.xml  layout_recycler_search.xml  nav_header_comic.xml  nav_rail_header_comic.xml
gradle/wrapper/: gradle-wrapper.properties
(+250 files in other folders)
